<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".ui.fragment.MainPageFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btcturk_icon" />

    <TextView
        android:id="@+id/textViewFiyatlar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/fiyatlar"
        android:fontFamily="@font/noto_sans_semibold"
        android:textColor="@color/shortCryptoNameTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageViewQR"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qrcode" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSearch"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/searchViewBackground"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewSearch"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="15dp"
                android:src="@drawable/search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:fontFamily="@font/roboto"
                android:hint="@string/edittext_hint"
                android:textColor="@color/shortCryptoNameTextColor"
                android:textColorHint="@color/volumeTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewSearch"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radioGroupPair"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/radio_button_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewSearch">

        <RadioButton
            android:id="@+id/radioButtonTRY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/try_text"
            android:textColor="@color/pairRadioButtonNotSelectedTextColor"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonUSDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/usdt_text"
            android:textColor="@color/pairRadioButtonSelectorTextColor"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:checked="false"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@color/pairRadioButtonNotSelectedTextColor"
            android:textSize="12sp" />
    </RadioGroup>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPair"
        app:tabIndicatorColor="@color/white"
        app:tabMode="scrollable"
        app:tabRippleColor="@color/mainColor"
        app:tabSelectedTextColor="@color/shortCryptoNameTextColor"
        app:tabTextColor="@color/tabTextColor">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tumu" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yapay_zeka" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metaverse" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fan_token" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meme" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oyun" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web3" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defi" />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dividerColor="@color/dividerColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <TextView
        android:id="@+id/textViewIsim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/roboto"
        android:text="@string/isim"
        android:textColor="@color/sortTextColor"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

    <ImageView
        android:id="@+id/imageViewUpDownIsim"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewIsim"
        app:layout_constraintStart_toEndOf="@+id/textViewIsim"
        app:layout_constraintTop_toTopOf="@+id/textViewIsim"
        app:srcCompat="@drawable/updown" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        app:dividerColor="@color/dividerColor"
        app:layout_constraintTop_toBottomOf="@+id/textViewIsim"
        tools:layout_editor_absoluteX="-16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.11" />

    <TextView
        android:id="@+id/textViewHacim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/hacim"
        android:textColor="@color/sortTextColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

    <ImageView
        android:id="@+id/imageViewUpDownHacim"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHacim"
        app:layout_constraintStart_toEndOf="@+id/textViewHacim"
        app:layout_constraintTop_toTopOf="@+id/textViewHacim"
        app:srcCompat="@drawable/updown" />

    <TextView
        android:id="@+id/textViewDegisim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/roboto"
        android:text="@string/degisim"
        android:textColor="@color/sortTextColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

    <ImageView
        android:id="@+id/imageViewUpDownDegisim"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDegisim"
        app:layout_constraintStart_toEndOf="@+id/textViewDegisim"
        app:layout_constraintTop_toTopOf="@+id/textViewDegisim"
        app:srcCompat="@drawable/updown" />

    <TextView
        android:id="@+id/textViewFiyat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/roboto"
        android:text="@string/fiyat"
        android:textColor="@color/sortTextColor"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

    <ImageView
        android:id="@+id/imageViewUpDownFiyat"
        android:layout_width="13dp"
        android:layout_height="13dp"
        android:layout_marginStart="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewFiyat"
        app:layout_constraintStart_toEndOf="@+id/textViewFiyat"
        app:layout_constraintTop_toTopOf="@+id/textViewFiyat"
        app:srcCompat="@drawable/updown" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.61" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.78" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCrypto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/favoriteswallet"
        app:layout_constraintBottom_toBottomOf="@+id/cardViewSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewSearch"
        app:layout_constraintTop_toTopOf="@+id/cardViewSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>